# agent_web

./: .gitignore  AGENTS.md  Notes.md  README.en.md  README.md  README.zh-CN.md  config.example.json  module_code_structure.md  module_mapping.csv  start_open_codex_web.sh  start_remote_gui_tools.sh
backend/: deleted-sessions.json  (+2 more)
backend/workflow_agents/agents/cad_builders/: pyproject.toml
backend/workflow_agents/agents/cad_builders/src/cad_builders/: __init__.py  catch_simulation_preprocess.py  common.py  progress.py
backend/workflow_agents/agents/cad_builders/src/cad_builders/box/: __init__.py  builder.py  screenshots.py  support.py
backend/workflow_agents/agents/cad_builders/src/cad_builders/real_assembly/: __init__.py  builder.py  models.py  support.py
backend/workflow_agents/agents/cad_builders/src/cad_builders/rpc_scripts/: build_real_assembly_hybrid.py
backend/workflow_agents/agents/cad_builders/src/cad_builders/scripts/: __init__.py  add_wall_materials.py
backend/workflow_agents/agents/cad_builders/src/cad_builders/sim_input/: __init__.py  after_state.py  builder.py  freecad_runtime.py  support.py
backend/workflow_agents/agents/cad_builders/src/cad_builders/validate/: __init__.py  runner.py
backend/workflow_agents/agents/cad_cli/: Makefile  README.md  pyproject.toml
backend/workflow_agents/agents/cad_cli/src/cad_cli/: __init__.py  build_box.py  build_real_assembly.py  build_sim_input.py  cli.py  freecad_glb_exporter.py  freecad_runtime.py  freecad_script_fragments.py  local_freecad_helpers.py  prepare_simulation_after_state.py  spec_common.py
backend/workflow_agents/agents/cad_cli/src/cad_cli/box/: builder.py  geometry.py  models.py  support.py
backend/workflow_agents/agents/cad_cli/src/cad_cli/rpc_scripts/: build_real_assembly_hybrid.py
backend/workflow_agents/agents/sim_cli_tools/: Makefile  README.md  comsol_progress.py  pyproject.toml  sim_run.py
backend/workflow_agents/agents/sim_cli_tools/runtime/codex_agents/: __init__.py  bootstrap.py  config.py  context.py  dependencies.py  external_tool_launchers.py  local_io.py  local_paths.py  logging_utils.py  package_paths.py  stage_adapters.py  stage_configs.py  step_base.py  steps.py
backend/workflow_agents/agents/sim_cli_tools/src/sim_cli_tools/: __init__.py  comsol_progress.py  progress.py
(+729 files in other folders)
