[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cad-builders"
version = "0.1.0"
description = "Class-based CAD builders for thermal workflow workspaces"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.hatch.build.targets.wheel]
packages = ["src/cad_builders"]

[tool.ruff.lint.per-file-ignores]
"src/cad_builders/rpc_scripts/*.py" = ["E402", "F821"]
