[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cad-cli"
version = "0.1.0"
description = "Command-line CAD builders for thermal workflow workspaces"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.scripts]
cad_cli = "cad_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cad_cli", "src/cad_cli/box"]

[tool.ruff.lint.per-file-ignores]
"src/cad_cli/rpc_scripts/*.py" = ["E402", "F821"]
