[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sim-cli-tools"
version = "0.1.1"
description = "Command-line tools for running the copied simulation runtime"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "FreeCAD MCP Team"},
]
keywords = ["simulation", "comsol", "paraview", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
sim-run = "sim_cli_tools.cli.main:main"
sim-comsol-progress = "sim_cli_tools.cli.comsol_progress:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sim_cli_tools"]

[tool.hatch.version]
path = "src/sim_cli_tools/__init__.py"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []
